--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h2 {
+  font-size: 1.5rem;
+  color: #ff6565;
+  font-weight: bolder;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+
+@media only screen and (min-device-width: 768px) {
+h2 {
+  font-size: 2.3rem;
+  color: #ff6565;
+  font-weight: bolder;
+  letter-spacing: 0.4rem;;
+  text-transform: uppercase;
+}
+}
