--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -1,125 +1,13 @@
-@keyframes type {
-  0% {
-    width: 0;
-  }
-
-  99.9% {
-    border-right: .15em solid orange;
-  }
-
-  100% {
-    border: none;
-  }
-}
-
-@-webkit-keyframes type {
-  0% {
-    width: 0;
-  }
-
-  99.9% {
-    border-right: .15em solid orange;
-  }
-
-  100% {
-    border: none;
-  }
-}
-
-@keyframes type2 {
-  0% {
-    width: 0;
-  }
-
-  1% {
-    opacity: 1;
-  }
-
-  99.9% {
-    border-right: .15em solid orange;
-  }
-
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-@-webkit-keyframes type2 {
-  0% {
-    width: 0;
-  }
-
-  1% {
-    opacity: 1;
-  }
-
-  99.9% {
-    border-right: .15em solid orange;
-  }
-
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-
-@-webkit-keyframes blink {
-  50% {
-    border-color: tranparent;
-  }
-}
-
-.contactTitle span {
-  color: #fff;
-  border-right: .15em solid orange;
-  font-size: 2rem;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-top: 1rem;
-}
-
-.contactTitle span:nth-child(1) {
-  width: 7em;
-  -webkit-animation: type 2s steps(40, end);
-  animation: type 2s steps(40, end);
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.contactTitle span:nth-child(2) {
-  width: 3em;
-  opacity: 0;
-  -webkit-animation: type2 5s steps(20, end), blink .5s step-end infinite alternate;
-  animation: type2 2s steps(40, end), blink .5s step-end infinite alternate;
-  -webkit-animation-delay: 4s;
-  animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
 .containerContact {
-  margin: 2rem;
-  border: 2px solid rgb(255, 255, 255);
-  border-radius: 1.5rem;
+  margin: 3rem;
   padding: 2rem;
-  height: 80vh;
+  height: 100%;
 }
 
 
 .contactTitle {
   display: flex;
   justify-content: center;
-  font-size: 2rem;
-  color: rgb(255, 238, 0);
-  letter-spacing: 0.3rem;
-  text-transform: uppercase;
 }
 
 /* h1 span {
@@ -135,7 +23,6 @@
 
 .col a{
   height: auto;
-  background-color: #000;
   border: none;
   justify-content: center;
   text-align: center;
@@ -143,50 +30,46 @@
 
 .col a:hover{
   height: auto;
-  background-color: none;
+  background-color: transparent;
   border: none;
   justify-content: center;
   text-align: center;
 }
 
 .icon {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
   margin: 1rem 0;
 }
 
 .btn:hover {
-  color:rgb(114, 114, 114);
+  color:rgb(192, 192, 192);
   background-color: rgb(0, 0, 0);
 }
 
 @media only screen and (min-device-width: 768px) {
-  .containerContact {
-    display:block;
-    margin: 2rem;
-    border-radius: 1.5rem;
-    padding: 6rem;
-  }
-
-  
-
-  .contactTitle {
-    font-size: 2.5rem;
-    letter-spacing: 0.5rem;;
-    text-transform: uppercase;
-  }
-
-  .socialMedia {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    margin-top: 8rem;
-  }
-  .row-cols-1 {
-    width: 33%;
+.containerContact {
+  display:block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 1.5rem;
+  padding: 6rem;
 }
+
+.socialMedia {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  margin-top: 4rem;
+}
+
+.row-cols-1 {
+  width: 33%;
+}
+
 .icon {
-  font-size: 5rem;
+  font-size: 4rem;
   text-align: center;
 }
 }
